fix pictogram alignment

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -61,11 +61,16 @@ p.text {
 i.pictogram {
   font-family: "entypo";
   display: inline-block;
-  margin: 0 5px 0 0;
+  width: 23px;
+  margin: 0;
   font-size: 2.5em;
-  line-height: 0.3;
+  height: 20px;
+  line-height: 0.50;
+  overflow: hidden;
+  vertical-align: middle;
+  padding: 0px 0 0 0;
   font-style: normal;
-  font-weight: lighter;
+  font-weight: 100;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -438,18 +443,22 @@ h3.agree,
   margin: 0 0 0 0;
 }
 
-h3.disagree,
+h3.disagree {
+  color: rgba(52,52,52,0.3);
+}
+
 .disagree {
   color: rgba(52,52,52,0.3);
   font-family: 'Lato-Bold', sans-serif;
-  margin: 0;
+  margin: 0 5px 0 0;
 }
+
 
 
 .agree {
   color: rgba(43,166,203,0.9);
   font-family: 'Lato-Bold', sans-serif;
-  margin: 0 0 0 0;
+  margin: 0 5px 0 0;
 }
 
 .agree .pictogram {
